<resources>
    <string name="app_name">TI</string>
    <string name="welcome">Bienvenido</string>
    <string name="FAQ">FAQ</string>
    <string name="KnowMaster">Maestros</string>
    <string name="KnowGroups">Grupos</string>
    <string name="tarjeta2">Ejemplo</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="SignUp">Registrar</string>
    <string name="SignIn">Acceder</string>
    <string name="Correo">Correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="signed_out">Sin acceder</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>


    <string name="grupo1">¿Dónde se encuentran los profesores de la facultad?</string>
    <string name="grupo2">¿A quién debo acudir para consultar asuntos acerca de la facultad?</string>
    <string name="grupo3">¿Cuáles carreras comprende la Facultad de Tecnologías de Información?</string>
    <string name="grupo4">¿Dónde puedo consultar mi Plan de Estudios?</string>
    <string name="grupo5">¿Qué actividades extracurriculares se realizan en la facultad?</string>
    <string name="grupo6">¿Cómo puedo involucrarme más en la facultad?</string>
    <string-array name="grupo1">
        <item>Puedes encontrar a los profesores de tiempo completo en el Pool de Ingenierías ubicado en el segundo piso del Edificio de Idiomas.</item>
    </string-array>

    <string-array name="grupo2">
        <item>Puedes acudir con la Dra. Laura Margarita Rodríguez Peralta, directora de la Facultad de Tecnologías de Información.</item>
    </string-array>

    <string-array name="grupo3">
        <item>Ingeniería en Computación y Sistemas e Ingeniería de Software.</item>
    </string-array>

    <string-array name="grupo4">
        <item>Puedes conocer tu plan de estudios a través de la plataforma de Unisoft. Para acceder a ella deberás contar con tu usuario (ID) y contraseña (asignada).</item>
    </string-array>

    <string-array name="grupo5">
        <item>La facultad de TI realiza conferencias, talleres y workshops a lo largo del ciclo escolar. ¡No te los pierdas!</item>
    </string-array>

    <string-array name="grupo6">
        <item>Acudiendo a las actividades que ofrece, así como participando en Mesas Directivas o en el Consejo Universitario.</item>
    </string-array>
    <string name="Out">Salir</string>
</resources>
